[gd_scene load_steps=5 format=2]

[ext_resource path="res://Map/PlyaerPosition.png" type="Texture" id=1]
[ext_resource path="res://MainCamera.gd" type="Script" id=2]
[ext_resource path="res://PlayerSprite.gd" type="Script" id=3]
[ext_resource path="res://Map.gd" type="Script" id=5]

[node name="Map" type="Node"]
script = ExtResource( 5 )

[node name="MainCamera" type="Camera2D" parent="."]
anchor_mode = 0
current = true
zoom = Vector2( 0.6, 0.6 )
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="PlayerSprite" type="Sprite" parent="."]
position = Vector2( 26, 194 )
z_index = 1
texture = ExtResource( 1 )
script = ExtResource( 3 )

[node name="MovementTween" type="Tween" parent="PlayerSprite"]

[connection signal="tween_all_completed" from="PlayerSprite/MovementTween" to="." method="_on_MovementTween_tween_all_completed"]
